--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     <div class="container">
+        <!-- Переключатель темы -->
+        <button class="theme-switch" id="theme-switch">🌙</button>
+
         <!-- Заголовок с информацией пользователя -->
         <header class="user-header">
             <img id="user-photo" src="" alt="Аватар" class="avatar">
